; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_video-i2c.c_video_i2c_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_video-i2c.c_video_i2c_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_device = type { i32 }
%struct.video_i2c_data = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.video_device*)* @video_i2c_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @video_i2c_release(%struct.video_device* %0) #0 {
  %2 = alloca %struct.video_device*, align 8
  %3 = alloca %struct.video_i2c_data*, align 8
  store %struct.video_device* %0, %struct.video_device** %2, align 8
  %4 = load %struct.video_device*, %struct.video_device** %2, align 8
  %5 = call %struct.video_i2c_data* @video_get_drvdata(%struct.video_device* %4)
  store %struct.video_i2c_data* %5, %struct.video_i2c_data** %3, align 8
  %6 = load %struct.video_i2c_data*, %struct.video_i2c_data** %3, align 8
  %7 = getelementptr inbounds %struct.video_i2c_data, %struct.video_i2c_data* %6, i32 0, i32 3
  %8 = call i32 @v4l2_device_unregister(i32* %7)
  %9 = load %struct.video_i2c_data*, %struct.video_i2c_data** %3, align 8
  %10 = getelementptr inbounds %struct.video_i2c_data, %struct.video_i2c_data* %9, i32 0, i32 2
  %11 = call i32 @mutex_destroy(i32* %10)
  %12 = load %struct.video_i2c_data*, %struct.video_i2c_data** %3, align 8
  %13 = getelementptr inbounds %struct.video_i2c_data, %struct.video_i2c_data* %12, i32 0, i32 1
  %14 = call i32 @mutex_destroy(i32* %13)
  %15 = load %struct.video_i2c_data*, %struct.video_i2c_data** %3, align 8
  %16 = getelementptr inbounds %struct.video_i2c_data, %struct.video_i2c_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @regmap_exit(i32 %17)
  %19 = load %struct.video_i2c_data*, %struct.video_i2c_data** %3, align 8
  %20 = call i32 @kfree(%struct.video_i2c_data* %19)
  ret void
}

declare dso_local %struct.video_i2c_data* @video_get_drvdata(%struct.video_device*) #1

declare dso_local i32 @v4l2_device_unregister(i32*) #1

declare dso_local i32 @mutex_destroy(i32*) #1

declare dso_local i32 @regmap_exit(i32) #1

declare dso_local i32 @kfree(%struct.video_i2c_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
